# bob-music-player-t

./: .gitignore  pyproject.toml  readme.md
src/bob-music-player/: App.py
src/bob-music-player/audioplayer/: AudioPlayer.py
src/bob-music-player/utils/: format_utils.py
src/bob-music-player/widgets/: LyricView.py  PlayProgressView.py
