[tool.poetry]
name = "bob-music-player-t"
version = "0.1.0"
description = "A TUI music player using textual library."
authors = ["bob1996w <bob1996w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.9"
pygame = "^2.0.1"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
